<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">후잉 문자 자동 입력기</string>
    <string name="action_settings">Settings</string>
    
    <!-- General -->
    <string name="text_complete">완료</string>
    <string name="text_about">정보</string>
    <string name="text_search">검색</string>
    <string name="exit">종료</string>
    <string name="is_exit">종료하시겠습니까?</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="yes">네</string>
    <string name="no">아니오</string>
    
    <!-- Main -->
    <string name="main_msg_need_setting">우측 상단 설정버튼을 눌러서 설정을 먼저 해주세요</string>
    <string name="main_btn_input">선택한 SMS 입력</string>
    <string name="main_alert_dlg_msg">후잉에서 인식을 못하네요. 후잉에 보고하시겠어요?</string>
    <string name="main_msg_report_success">보고 성공했습니다. 하루 이틀 후 다시 문자 입력을 시도해보세요.</string>
    <string name="main_msg_success">입력 성공했습니다</string>
    <string name="main_msg_no_history">입력 성공한 기록이 없습니다.</string>
    <string name="main_date_from"></string>
    <string name="main_date_to"></string>
    
    <!-- Auth -->
    <string name="msg_auth_success">인증성공!</string>
    <string name="msg_auth_fail">인증 실패!</string>
    <string name="auth_doing">▶</string>
    
    <!-- Setting -->
    <string name="setting_card">보유 카드 설정</string>
    <string name="setting_alarm_time">알림 간격</string>
    <string name="setting_dlg_card_title">보유 카드 선택</string>
    <string name="setting_dlg_alarm_title">알람 시간 선택</string>
    <string name="setting_alarm_time_desc">아직 알람은 지원하지 않습니다</string>
    <string name="setting_section">문자 입력 섹션</string>
    <string name="setting_warning_no_section">섹션 정보가 없습니다.</string>
    
    
    <!-- Submenus -->
    <string name="submenu_setting">설정</string>
    <string name="submenu_rating">별점 매기기</string>
    <string name="submenu_about">앱 정보</string>
    <string name="submenu_test">TEST</string>
    
    
    <!-- About dialog  -->
    <string name="about_app_desc">이 앱은 써드파티 어플로서 후잉과는 아무 상관이 없습니다. 소스는 Github로 아파치 라이센스 2.0으로 공개되어 있습니다. 앱 특성 상 수신된 SMS를 읽지만 후잉 API에 사용하는 것 외에 별도로 저장하지 않습니다.</string>
    <string name="about_app_contact_developer">개발자 이메일</string>
    <string name="about_app_contact_developer_email">kim.jongha@gmail.com</string>
    
    <string name="about_app_blog">Blog : http://story.wisedog.net/category/my_programming_stuff/</string>
    <string name="about_app_github">Source : https://github.com/wisedog/WhoochooAdvSms</string>
    <string name="about_app_creator">Created by Jongha Kim</string>
    <string name="about_app_send_email">Choose Email Client</string>
    <string name="about_app_version">Version : </string>
    
    <!-- Content Description -->
    <string name="desc_imgbtn_calendar">Calendar</string>
    

</resources>
