<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2013 Jongha Kim

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E5"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:gravity="right" >

        <Button
            android:id="@+id/user_setting_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickCancel"
            android:text="@string/cancel"
            android:textColor="#333333"
            android:visibility="invisible" />

        <Button
            android:id="@+id/user_setting_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickComplete"
            android:text="@string/text_complete"
            android:textColor="#333333" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/setting_text_card"
            android:text="@string/setting_loading_card"
            android:textColor="#AAAAAA"
            android:textSize="24sp"
            android:gravity="center_vertical"
            android:clickable="true" />
       	
        <View 
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/setting_text_alarm_time"
            android:text="@string/setting_alarm_time"
            android:textColor="#AAAAAA"
            android:textSize="24sp"
            android:gravity="center_vertical" 
            android:clickable="true"/>

    </LinearLayout>

</RelativeLayout>